--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -21,7 +21,9 @@
         android:usesCleartextTraffic="true">
         <activity
             android:name="br.com.expnordeste.app.sigapro.MainActivity"
-            android:configChanges="keyboard|keyboardHidden|orientation|screenSize"
+            android:configChanges="keyboard|keyboardHidden|orientation|screenSize|uiMode"
+            android:launchMode="singleTask"
+            android:screenOrientation="portrait"
             android:label="@string/app_name"
             android:windowSoftInputMode="adjustResize">
             <intent-filter>
