--- a/android/build.gradle
+++ b/android/build.gradle
@@ -3,17 +3,16 @@
 buildscript {
     ext {
         buildToolsVersion = "29.0.3"
-        minSdkVersion = 16
+        minSdkVersion = 17
         compileSdkVersion = 29
         targetSdkVersion = 29
-        supportLibVersion = "28.0.0"
     }
-    repositories {
+     repositories {
         google()
         jcenter()
     }
     dependencies {
-        classpath("com.android.tools.build:gradle:3.4.0")
+        classpath("com.android.tools.build:gradle:4.0.1")
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
@@ -21,7 +20,7 @@ buildscript {
 }
 
 subprojects {
-    afterEvaluate { project ->
+    afterEvaluate {project ->
         if (project.hasProperty("android")) {
             android {
                 compileSdkVersion rootProject.ext.compileSdkVersion
@@ -34,12 +33,17 @@ subprojects {
 allprojects {
     repositories {
         mavenLocal()
-        google()
-        jcenter()
-        maven { url "https://jitpack.io" }
         maven {
             // All of React Native (JS, Obj-C sources, Android binaries) is installed from npm
-            url "$rootDir/../node_modules/react-native/android"
+            url("$rootDir/../node_modules/react-native/android")
         }
+        maven {
+            // Android JSC is installed from npm
+            url("$rootDir/../node_modules/jsc-android/dist")
+        }
+
+        google()
+        jcenter()
+        maven { url 'https://www.jitpack.io' }
     }
 }
