--- a/package.json
+++ b/package.json
@@ -1,40 +1,57 @@
 {
-  "name": "SIGAPRO",
+  "name": "siga-pro",
   "version": "0.0.1",
   "private": true,
   "scripts": {
-    "start": "node node_modules/react-native/local-cli/cli.js start",
-    "test": "jest"
+    "android": "react-native run-android",
+    "ios": "react-native run-ios",
+    "start": "react-native start",
+    "test": "jest",
+    "lint": "eslint .",
+    "jetify": "jetify",
+    "pod": "bash pod-install.sh",
+    "postinstall": "run-p jetify pod"
   },
   "dependencies": {
-    "@react-native-community/async-storage": "1.6.1",
+    "@react-native-community/async-storage": "1.7.1",
+    "@react-native-community/datetimepicker": "3.0.6",
+    "@react-native-community/masked-view": "0.1.10",
+    "@react-native-community/netinfo": "4.7.0",
+    "@react-native-picker/picker": "1.9.12",
     "axios": "0.18.0",
     "jwt-decode": "2.2.0",
     "moment": "2.22.1",
-    "react": "16.8.3",
-    "react-native": "0.59.10",
-    "react-native-camera": "2.10.1",
+    "react": "16.13.1",
+    "react-native": "0.63.4",
+    "react-native-camera": "3.43.0",
     "react-native-datepicker": "1.7.2",
-    "react-native-device-info": "0.26.4",
+    "react-native-device-info": "6.2.1",
     "react-native-elements": "0.19.1",
-    "react-native-gesture-handler": "1.1.0",
-    "react-native-get-location": "0.0.10",
-    "react-native-image-crop-picker": "0.22.0",
-    "react-native-orientation": "3.1.3",
-    "react-native-reanimated": "1.0.0",
-    "react-native-simple-dialogs": "1.1.0",
-    "react-native-tab-view": "2.0.3",
-    "react-native-vector-icons": "4.6.0",
-    "react-navigation": "1.5.12",
+    "react-native-gesture-handler": "1.10.3",
+    "react-native-get-location": "2.0.0",
+    "react-native-image-crop-picker": "0.36.0",
+    "react-native-pager-view": "5.1.0",
+    "react-native-reanimated": "1.13.2",
+    "react-native-safe-area-context": "3.1.9",
+    "react-native-screens": "2.18.1",
+    "react-native-simple-dialogs": "1.4.0",
+    "react-native-tab-view": "3.0.0",
+    "react-native-vector-icons": "6.6.0",
+    "react-navigation": "4.4.4",
+    "react-navigation-drawer": "2.7.0",
+    "react-navigation-stack": "2.10.4",
     "vanilla-masker": "1.2.0"
   },
   "devDependencies": {
-    "@babel/core": "7.4.5",
-    "@babel/runtime": "7.4.5",
-    "babel-jest": "24.8.0",
-    "jest": "24.8.0",
-    "metro-react-native-babel-preset": "0.54.1",
-    "react-test-renderer": "16.8.3"
+    "@babel/core": "7.8.4",
+    "@babel/runtime": "7.8.4",
+    "@react-native-community/eslint-config": "1.1.0",
+    "babel-jest": "25.1.0",
+    "eslint": "6.5.1",
+    "jest": "25.1.0",
+    "metro-react-native-babel-preset": "0.59.0",
+    "npm-run-all": "4.1.5",
+    "react-test-renderer": "16.13.1"
   },
   "jest": {
     "preset": "react-native"
