--- a/android/build.gradle
+++ b/android/build.gradle
@@ -2,17 +2,23 @@
 
 buildscript {
     ext {
-        buildToolsVersion = "29.0.3"
-        minSdkVersion = 17
-        compileSdkVersion = 29
-        targetSdkVersion = 29
+        buildToolsVersion = "30.0.2"
+        minSdkVersion = 19
+        compileSdkVersion = 31
+        targetSdkVersion = 31
+        ndkVersion = "21.3.6528147"
+
+//        buildToolsVersion = "29.0.3"
+//        minSdkVersion = 17
+//        compileSdkVersion = 29
+//        targetSdkVersion = 29
     }
      repositories {
         google()
         jcenter()
     }
     dependencies {
-        classpath("com.android.tools.build:gradle:4.0.1")
+        classpath('com.android.tools.build:gradle:4.1.1')
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
