--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -21,6 +21,7 @@
         android:usesCleartextTraffic="true">
         <activity
             android:name="br.com.expnordeste.app.sigapro.MainActivity"
+            android:exported="true"
             android:configChanges="keyboard|keyboardHidden|orientation|screenSize|uiMode"
             android:launchMode="singleTask"
             android:screenOrientation="portrait"
