--- a/ios/CargasNordeste/Info.plist
+++ b/ios/CargasNordeste/Info.plist
@@ -36,7 +36,7 @@
 		</dict>
 	</dict>
 	<key>NSLocationWhenInUseUsageDescription</key>
-	<string></string>
+	<string/>
 	<key>UIAppFonts</key>
 	<array>
 		<string>AntDesign.ttf</string>
@@ -57,7 +57,7 @@
 		<string>Fontisto.ttf</string>
 	</array>
 	<key>UIUserInterfaceStyle</key>
-  	<string>Light</string>
+	<string>Light</string>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIRequiredDeviceCapabilities</key>
