--- a/android/build.gradle
+++ b/android/build.gradle
@@ -2,16 +2,11 @@
 
 buildscript {
     ext {
-        buildToolsVersion = "31.0.0"
-        minSdkVersion = 19
+        buildToolsVersion = "30.0.2"
+        minSdkVersion = 21
         compileSdkVersion = 31
         targetSdkVersion = 31
         ndkVersion = "21.3.6528147"
-
-//        buildToolsVersion = "29.0.3"
-//        minSdkVersion = 17
-//        compileSdkVersion = 29
-//        targetSdkVersion = 29
     }
      repositories {
         google()
@@ -19,9 +14,6 @@ buildscript {
     }
     dependencies {
         classpath("com.android.tools.build:gradle:4.0.1")
-
-        // NOTE: Do not place your application dependencies here; they belong
-        // in the individual module build.gradle files
     }
 }
 
@@ -52,4 +44,11 @@ allprojects {
         jcenter()
         maven { url 'https://www.jitpack.io' }
     }
+
+      configurations.all {
+            resolutionStrategy {
+                force "com.facebook.react:react-native:0.63.4"
+            }
+      }
+
 }
