--- a/package.json
+++ b/package.json
@@ -8,9 +8,7 @@
     "start": "react-native start",
     "test": "jest",
     "lint": "eslint .",
-    "jetify": "jetify",
-    "pod": "bash pod-install.sh",
-    "postinstall": "run-p jetify pod"
+    "jetify": "jetify"
   },
   "resolutions": {
     "graceful-fs": "4.2.4"
