--- a/ios/Podfile
+++ b/ios/Podfile
@@ -5,9 +5,17 @@ platform :ios, '12.0'
 
 target 'CargasNordeste' do
   config = use_native_modules!
-
   use_react_native!(:path => config["reactNativePath"])
 
+  post_install do |installer|
+      installer.pods_project.targets.each do |target|
+        target.build_configurations.each do |config|
+          config.build_settings['EXPANDED_CODE_SIGN_IDENTITY'] = ""
+          config.build_settings['CODE_SIGNING_REQUIRED'] = "NO"
+          config.build_settings['CODE_SIGNING_ALLOWED'] = "NO"
+         end
+      end
+    end
 
 end
 
