--- a/package.json
+++ b/package.json
@@ -42,7 +42,8 @@
     "react-navigation": "4.4.4",
     "react-navigation-drawer": "2.7.0",
     "react-navigation-stack": "2.10.4",
-    "vanilla-masker": "1.2.0"
+    "vanilla-masker": "1.2.0",
+    "prop-types": "latest"
   },
   "devDependencies": {
     "@babel/core": "7.8.4",
