--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "axios": "0.18.0",
     "jwt-decode": "2.2.0",
     "moment": "2.22.1",
+    "prop-types": "latest",
     "react": "16.13.1",
     "react-native": "0.63.4",
     "react-native-camera": "3.43.0",
@@ -42,8 +43,7 @@
     "react-navigation": "4.4.4",
     "react-navigation-drawer": "2.7.0",
     "react-navigation-stack": "2.10.4",
-    "vanilla-masker": "1.2.0",
-    "prop-types": "latest"
+    "vanilla-masker": "1.2.0"
   },
   "devDependencies": {
     "@babel/core": "7.8.4",
