Feat : Create Upload key and app’s release bundle (.aab) file
- Move the created keystore file rnTSgitlabCICDExample-upload.keystore under the android/app directory in your project folder.

sudo keytool -genkey -v -keystore rnTSgitlabCICDExample-upload.keystore -alias rnTSgitlabCICDExample-upload -keyalg RSA -keysize 2048 -validity 10000

--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -15,5 +15,12 @@ FLIPPER_VERSION=0.54.0
 android.enableJetifier=true
 android.useAndroidX=true
 #org.gradle.jvmargs=-Xmx2560M -Dkotlin.daemon.jvm.options\="-Xmx2560M"
-org.gradle.daemon = true 
+org.gradle.daemon = true
 org.gradle.jvmargs = -Xmx4096m
+org.gradle.configureondemand=false
+
+# Create Upload key and app’s release bundle (.aab) file
+MYAPP_UPLOAD_STORE_FILE=rnTSgitlabCICDExample-upload.keystore
+MYAPP_UPLOAD_KEY_ALIAS= rnTSgitlabCICDExample-upload
+MYAPP_UPLOAD_STORE_PASSWORD=vipdbinf
+MYAPP_UPLOAD_KEY_PASSWORD=vipdbinf
