--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "react-native-gesture-handler": "1.10.3",
     "react-native-get-location": "2.0.0",
     "react-native-pager-view": "5.1.0",
+    "react-native-paper": "^5.2.0",
     "react-native-reanimated": "1.13.2",
     "react-native-safe-area-context": "3.1.9",
     "react-native-screens": "2.18.1",
@@ -43,6 +44,8 @@
     "react-navigation": "4.4.4",
     "react-navigation-drawer": "2.7.0",
     "react-navigation-stack": "2.10.4",
+    "react-redux": "^8.0.5",
+    "redux": "^4.2.1",
     "vanilla-masker": "1.2.0"
   },
   "devDependencies": {
