--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.0.1",
   "private": true,
   "scripts": {
+    "postinstall": "react-native setup-ios-permissions && pod-install",
     "android": "react-native run-android",
     "ios": "react-native run-ios",
     "start": "react-native start",
@@ -35,6 +36,7 @@
     "react-native-get-location": "2.0.0",
     "react-native-pager-view": "5.1.0",
     "react-native-paper": "^5.2.0",
+    "react-native-permissions": "^3.7.3",
     "react-native-reanimated": "1.13.2",
     "react-native-safe-area-context": "3.1.9",
     "react-native-screens": "2.18.1",
@@ -57,9 +59,32 @@
     "jest": "25.1.0",
     "metro-react-native-babel-preset": "0.59.0",
     "npm-run-all": "4.1.5",
-    "react-test-renderer": "16.13.1"
+    "react-test-renderer": "16.13.1",
+    "pod-install": "0.1.38"
   },
   "jest": {
     "preset": "react-native"
-  }
+  },
+
+  "reactNativePermissionsIOS": [
+    "AppTrackingTransparency",
+    "BluetoothPeripheral",
+    "Calendars",
+    "Camera",
+    "Contacts",
+    "FaceID",
+    "LocationAccuracy",
+    "LocationAlways",
+    "LocationWhenInUse",
+    "MediaLibrary",
+    "Microphone",
+    "Motion",
+    "Notifications",
+    "PhotoLibrary",
+    "PhotoLibraryAddOnly",
+    "Reminders",
+    "Siri",
+    "SpeechRecognition",
+    "StoreKit"
+  ]
 }
