--- a/ios/CargasNordeste/Info.plist
+++ b/ios/CargasNordeste/Info.plist
@@ -35,16 +35,34 @@
 			</dict>
 		</dict>
 	</dict>
+	<key>NSAppleMusicUsageDescription</key>
+	<string>Play using while you are hiking</string>
+	<key>NSBluetoothAlwaysUsageDescription</key>
+	<string>Our app uses bluetooth to find, connect and transfer data between different devices</string>
+	<key>NSBluetoothPeripheralUsageDescription</key>
+	<string>Precisamos de acesso à sua conexão bluetooth para fazer upload de dados do seu dispositivo para relatórios de falhas.</string>
+	<key>NSCalendarsUsageDescription</key>
+	<string>precisa acessar os calendários do usuário para permitir que ele agende compromissos e lembretes em datas e horários específicos.</string>
 	<key>NSCameraUsageDescription</key>
 	<string>O aplicativo precisa acessar a câmera para permitir ao usuário tirar fotos para postar em suas redes sociais</string>
+	<key>NSContactsUsageDescription</key>
+	<string>precisa acessar os contatos do usuário para permitir que ele atribua tarefas a pessoas específicas em sua lista de contatos.</string>
 	<key>NSLocationAlwaysAndWhenInUseUsageDescription</key>
 	<string>Garantimos que a localização do usuário será usada apenas para fins de melhorar a experiência do usuário no aplicativo e que a privacidade do usuário será protegida. Não compartilhamos informações de localização com terceiros sem o consentimento do usuário.</string>
 	<key>NSLocationWhenInUseUsageDescription</key>
-	<string>authorization allows your app to access user's location when the app is in foreground or active while “Always” authorization allows your app to access user's location even when it's in the background.</string>
+	<string>A autorização permite que seu aplicativo acesse a localização do usuário quando o aplicativo está em primeiro plano ou ativo, enquanto a autorização “Sempre” permite que seu aplicativo acesse a localização do usuário mesmo quando está em segundo plano.</string>
+	<key>NSMicrophoneUsageDescription</key>
+	<string>Precisa de acesso ao microfone para fazer upload de áudio</string>
+	<key>NSMotionUsageDescription</key>
+	<string>Gymap needs access to motion data to display steps.</string>
 	<key>NSPhotoLibraryAddUsageDescription</key>
 	<string>aplicativo permite que o usuário adicione fotos a um álbum específico</string>
 	<key>NSPhotoLibraryUsageDescription</key>
 	<string>aplicativo permite que os usuários compartilhem fotos em redes sociais, à biblioteca de fotos é necessário para permitir que os usuários adicionem fotos ao álbum.</string>
+	<key>NSSiriUsageDescription</key>
+	<string>You have to describe the real usage for a human.</string>
+	<key>NSSpeechRecognitionUsageDescription</key>
+	<string>recognize speech</string>
 	<key>Privacy – Location When In Use Usage Description</key>
 	<string>Allow the app to access your location while you are using it.</string>
 	<key>UIAppFonts</key>
