--- a/ios/SigaPro.xcodeproj/xcshareddata/xcschemes/CargasNordeste.xcscheme
+++ b/ios/SigaPro.xcodeproj/xcshareddata/xcschemes/CargasNordeste.xcscheme
@@ -29,9 +29,9 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-               BuildableName = "CargasNordeste.app"
+               BuildableName = "SigaPro.app"
                BlueprintName = "SIGAPRO"
-               ReferencedContainer = "container:CargasNordeste.xcodeproj">
+               ReferencedContainer = "container:SigaPro.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
          <BuildActionEntry
@@ -45,7 +45,7 @@
                BlueprintIdentifier = "00E356ED1AD99517003FC87E"
                BuildableName = "CargasNordesteTests.xctest"
                BlueprintName = "CargasNordesteTests"
-               ReferencedContainer = "container:CargasNordeste.xcodeproj">
+               ReferencedContainer = "container:SigaPro.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
       </BuildActionEntries>
@@ -59,9 +59,9 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-            BuildableName = "CargasNordeste.app"
+            BuildableName = "SigaPro.app"
             BlueprintName = "SIGAPRO"
-            ReferencedContainer = "container:CargasNordeste.xcodeproj">
+            ReferencedContainer = "container:SigaPro.xcodeproj">
          </BuildableReference>
       </MacroExpansion>
       <Testables>
@@ -72,7 +72,7 @@
                BlueprintIdentifier = "00E356ED1AD99517003FC87E"
                BuildableName = "CargasNordesteTests.xctest"
                BlueprintName = "CargasNordesteTests"
-               ReferencedContainer = "container:CargasNordeste.xcodeproj">
+               ReferencedContainer = "container:SigaPro.xcodeproj">
             </BuildableReference>
          </TestableReference>
       </Testables>
@@ -92,9 +92,9 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-            BuildableName = "CargasNordeste.app"
+            BuildableName = "SigaPro.app"
             BlueprintName = "SIGAPRO"
-            ReferencedContainer = "container:CargasNordeste.xcodeproj">
+            ReferencedContainer = "container:SigaPro.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
    </LaunchAction>
@@ -109,9 +109,9 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-            BuildableName = "CargasNordeste.app"
+            BuildableName = "SigaPro.app"
             BlueprintName = "SIGAPRO"
-            ReferencedContainer = "container:CargasNordeste.xcodeproj">
+            ReferencedContainer = "container:SigaPro.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
    </ProfileAction>
