FEAT : SIGA PRO REBUILD IOS

--- a/ios/SigaPro/Info.plist
+++ b/ios/SigaPro/Info.plist
@@ -22,6 +22,10 @@
 	<string>????</string>
 	<key>CFBundleVersion</key>
 	<string>$(CURRENT_PROJECT_VERSION)</string>
+	<key>ITSAppUsesNonExemptEncryption</key>
+	<false/>
+	<key>ITSEncryptionExportComplianceCode</key>
+	<string>Código de Conformidade de Exportação de Criptografia de Aplicativo</string>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
 	<key>NSAppTransportSecurity</key>
