--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react": "16.13.1",
     "react-native": "0.63.4",
     "react-native-camera": "3.43.0",
+    "react-native-date-picker": "^4.2.9",
     "react-native-datepicker": "1.7.2",
     "react-native-device-info": "6.2.1",
     "react-native-elements": "0.19.1",
