Feat : Caledar android 11+ react 0.63.4+
versão do React Native que você está usando não suporta mais o módulo DatePickerAndroid. A partir da versão 0.60 do React Native, o DatePickerAndroid foi depreciado e substituído pelo pacote @react-native-community/datetimepicker.

--- a/package.json
+++ b/package.json
@@ -26,9 +26,9 @@
     "prop-types": "latest",
     "react": "16.13.1",
     "react-native": "0.63.4",
+    "react-native-calendar-picker": "^7.1.4",
     "react-native-camera": "3.43.0",
     "react-native-date-picker": "^4.2.9",
-    "react-native-datepicker": "1.7.2",
     "react-native-device-info": "6.2.1",
     "react-native-elements": "0.19.1",
     "react-native-gesture-handler": "1.10.3",
