Correções para build

--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -24,3 +24,5 @@ MYAPP_UPLOAD_STORE_FILE=rnTSgitlabCICDExample-upload.keystore
 MYAPP_UPLOAD_KEY_ALIAS= rnTSgitlabCICDExample-upload
 MYAPP_UPLOAD_STORE_PASSWORD=vipdbinf
 MYAPP_UPLOAD_KEY_PASSWORD=vipdbinf
+
+android.jetifier.blacklist = annotation-experimental-1.4.0.aar
